<resources>
    <string name="app_name">HealthMate</string>
    <string name="diet_plans">Diet Plans</string>
    <string name="your_ideal_weight_n_a">Your Ideal Weight: N/A</string>
    <string name="your_bmi_0_0">Your BMI: 0.0</string>
    <string name="calculate_bmi_and_ideal_weight">Calculate BMI and Ideal Weight</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter your age:</string>
    <string name="height_cm">Height (cm)</string>
    <string name="enter_your_height_cm">Enter your height (cm):</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="enter_your_weight_kg">Enter your weight (kg):</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="total_calories_0">Total Calories: 0</string>
    <string name="calculate_calories">Calculate Calories</string>
    <string name="grams">Grams</string>
    <string name="enter_number_of_grams">Enter number of grams:</string>
    <string name="calorie_calculator">Calorie Calculator</string>
    <string name="diet_plan_description">Diet Plan Description</string>
    <string name="gyms_in_your_area">Gyms in Your Area</string>
    <string name="health_mate">Health Mate</string>
    <string name="health_calculations">Health Calculations</string>
    <string name="find_centers">Find Centers</string>
    <string name="find_gyms">Find Gyms</string>
    <string name="nutrition_centers">Nutrition Centers</string>
    <string name="select_a_center_for_more_details">Select a center for more details</string>
    <string name="select_gym_for_more_details">Select Gym For More Details</string>
    <string name="nutrition_center_details">Nutrition Center Details</string>
    <string name="this_is_a_detailed_description_of_the_center_it_includes_services_offered_contact_details_and_working_hours">This is a detailed description of the center. It includes services offered, contact details, and working hours.</string>
    <string name="phone_123_456_789">Phone: +123 456 789</string>
    <string name="hours_8_00_am_10_00_pm">Hours: 8:00 AM - 10:00 PM</string>
    <string name="back">Back</string>
    <string name="diet_plan_details">Diet Plan Details</string>
    <string name="services_nutrition_plans_consultations">Services: Nutrition Plans, Consultations</string>
    <string name="location_city_country">Location: City, Country</string>
    <string name="hours_9_00_am_5_00_pm">Hours: 9:00 AM - 5:00 PM</string>
    <string name="phone_0000000000">Phone: +0000000000</string>
    <string name="description">Description</string>
    <string name="center_details">Center Details</string>
</resources>