<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F4C3"
    tools:context=".MainActivity">


<TextView
android:id="@+id/appTitle"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/health_mate"
android:textSize="32sp"
android:textStyle="bold"
android:textColor="#388E3C"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="48dp" />


<TextView
android:id="@+id/healthCalculationsTitle"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/health_calculations"
android:textSize="20sp"
android:textStyle="bold"
android:textColor="#388E3C"
app:layout_constraintTop_toBottomOf="@id/appTitle"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
android:layout_marginTop="24dp" />


    <Button
        android:id="@+id/bmiButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#81C784"
        android:onClick="BMIOnClick"
        android:text="@string/bmi_calculator"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/healthCalculationsTitle" />


    <Button
        android:id="@+id/calorieCalculatorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#FFD54F"
        android:onClick="CaloriOnClick"
        android:text="@string/calculate_calories"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bmiButton" />


<TextView
android:id="@+id/findCentersTitle"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/find_centers"
android:textSize="20sp"
android:textStyle="bold"
android:textColor="#388E3C"
app:layout_constraintTop_toBottomOf="@id/calorieCalculatorButton"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
android:layout_marginTop="32dp" />


    <Button
        android:id="@+id/gymsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#64B5F6"
        android:onClick="FindGymOnClick"
        android:text="@string/find_gyms"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/findCentersTitle" />


    <Button
        android:id="@+id/nutritionCentersButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#FF8A65"
        android:onClick="NutritionOnClick"
        android:text="@string/nutrition_centers"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gymsButton" />

<TextView
android:id="@+id/dietPlansTitle"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/diet_plans"
android:textSize="20sp"
android:textStyle="bold"
android:textColor="#388E3C"
app:layout_constraintTop_toBottomOf="@id/nutritionCentersButton"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
android:layout_marginTop="32dp" />


    <Button
        android:id="@+id/dietPlansButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#4DB6AC"
        android:onClick="DietOnClick"
        android:text="@string/diet_plans"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dietPlansTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
